prototype_subpage_map

--- a/a_coding/a_prototype_01_test/css/common/common.css
+++ b/a_coding/a_prototype_01_test/css/common/common.css
@@ -28,7 +28,7 @@
 /* variable */
 
 :root {
-  --color-yellow:#FAD000;
+  --color-yellow:#fad000;
   --color-darkGray:#363636;
   --color-white:#ffffff;
   --color-textGray:#919191;
